znk-exercise fix overflow (#602)
* znk-exercise fix overflow

* znk-exercise fix overflow

* znk-exercise fix overflow

* znk-exercise fix overflow

* znk-exercise fix overflow

* znk-exercise fix overflow

--- a/src/components/znkExercise/scss/_znk-exercise-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-desktop.scss
@@ -125,8 +125,8 @@ znk-exercise.desktop {
                         height: 100%;
                     }
                 }
-                .swiper-slide-active {
-                  height: 95%;
+                .swiper-slide {
+                  height: 93%;
                 }
             }
         }
